first practice with group of blocks

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		</style>
 	</head>
 	<body>
-		<script type="module" src="/script.js"></script>
+		<!-- <script type="module" src="/script.js"></script> -->
+		<script type="module" src="/script-practice.js"></script>
 	</body>
 </html>
